really trying for css contrast issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -84,7 +84,6 @@ nav a {
 nav a:hover {
 	font-weight: 500;
 	text-decoration: underline;
-    background-color: var(--nav-hover-background-color);
     color: var(--nav-hover-link-color);
     transform: scale(1.1);
 }
